# kernel-planckster

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  caps_env.py  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality.yaml  docker-auto-build.yaml  pytest.yaml
alembic/: env.py
alembic/versions/: 1dadf5dfe9f9_separate_message_content_from_message_.py  2125e3f0d748_initialization.py  231d7b02e432_initialization.py  2dd1121a712b_init.py  3bdadc507473_add_external_id.py  44d9da9beab3_initialization.py  471c84099754_initialization.py  47f96c986212_initialization.py  5bbe420103fe_remove_testing_dummy_table.py  5bca151eac9d_initialization.py  6e3d1bbe150b_separate_message_contents_from_metadata.py  76f97f40e847_initialization.py  7a54088140e6_differentiate_message_metadata_from_.py  943b1eb7b423_testing_with_dummy_table.py  dbf7a8e73483_initialization.py  e1556eaba8ad_initialization.py
kp-docker/: Dockerfile  README.md  build.sh  docker-compose.yml
lib/core/dto/: client_repository_dto.py  conversation_repository_dto.py  file_repository_dto.py  knowledge_source_repository_dto.py  research_context_repository_dto.py  source_data_repository_dto.py  user_repository_dto.py  vector_store_dto.py
lib/core/entity/: models.py
lib/core/sdk/: caps_fastapi.py  controller.py  dto.py  fastapi.py  feature.py  feature_descriptor.py  ioc_feature_container.py  presenter.py  primary_ports.py  repository.py  usecase.py  usecase_models.py  utils.py  viewmodel.py
lib/core/usecase/: create_default_data_usecase.py  create_default_user_usecase.py  demo_usecase.py  download_file_usecase.py  extend_research_context_usecase.py  get_client_data_for_download_usecase.py  get_client_data_for_upload_usecase.py  list_conversations_usecase.py  list_messages_usecase.py  list_research_contexts_usecase.py  list_source_data_for_research_context_usecase.py  list_source_data_usecase.py  new_conversation_usecase.py  new_message_usecase.py  new_research_context_usecase.py  new_source_data_usecase.py  upload_file_usecase.py
lib/core/usecase_models/: create_default_data_usecase_models.py  demo_usecase_models.py  download_file_usecase_models.py  extend_research_context_usecase_models.py  get_client_data_for_download_usecase_models.py  get_client_data_for_upload_usecase_models.py  list_conversations_usecase_models.py  list_messages_usecase_models.py  list_research_contexts_usecase_models.py  list_source_data_for_research_context_usecase_models.py  list_source_data_usecase_models.py  new_conversation_usecase_models.py  new_message_usecase_models.py  new_research_context_usecase_models.py  new_source_data_usecase_models.py  upload_file_usecase_models.py
lib/core/view_model/: create_default_data_view_model.py  demo_view_model.py  download_file_view_model.py  extend_research_context_view_model.py  get_client_data_for_download_view_model.py  get_client_data_for_upload_view_model.py  list_conversations_view_model.py  list_messages_view_model.py  list_research_contexts_view_model.py  list_source_data_for_research_context_view_model.py  list_source_data_view_model.py  (+5 more)
rest/: config.py  main.py
tests/: conftest.py  docker-compose.yml  markers.py
tests/api/: test_create_default_data.py  test_demo.py  test_demo_presenter.py  test_extend_research_context_feature.py  test_get_client_data_for_download_feature.py  test_get_client_data_for_upload_feature.py  test_list_conversations.py  test_list_messages_feature.py  test_list_research_contexts_feature.py  test_list_source_data_feature.py  test_list_source_data_for_research_context_feature.py  test_new_conversation_feature.py  test_new_message_feature.py  test_new_research_context_feature.py  test_new_source_data.py  test_new_source_data_feature.py  test_upload_file_feature.py
tests/data/: test_file.txt
tests/repositories/: test_factory.py  test_hello.py  test_object_store.py  test_rdbms.py  test_sqla_conversation_repository.py  test_sqla_research_context_repository.py  test_sqla_research_context_repository_list_conversations.py
tests/rest/: test_demo_fastapi_endpoint.py  test_new_message_fastapi_endpoint.py
tools/: app_startup_utils.py
(+146 files in other folders)
