[tool.poetry]
name = "caps-starter-template"
version = "0.1.0"
description = "Template Repository for Clean Architecture Python Project"
authors = ["Mayank Sharma <imptodefeat@gmail.com>", "Luis Alejandro Bordo García <bgluiszz@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.4.0"
pydantic = "^2.3.0"
pytest-env = "^1.0.1"

[tool.pytest.ini_options]
env = [
    "THIS_PROJECT_ROOT_DIRECTORY=./tests/mocks",
    "THIS_PROJECT_SOURCE_DATA_DIR=source_data",
    "THIS_PROJECT_RDBMS_HOST=localhost",
    "THIS_PROJECT_RDBMS_PORT=5432",
    "THIS_PROJECT_RDBMS_DBNAME=capdb-test",
    "THIS_PROJECT_RDBMS_USERNAME=sqldbms",
    "THIS_PROJECT_RDBMS_PASSWORD=sqldbms",
]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
exclude = [
  "tests/types",
]

[[tool.mypy.overrides]]
module = "alembic.env"
ignore_errors = true

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''
