[tool.poetry]
name = "kernel-planckster"
version = "0.1.0"
description = "Core management system for Max Planck Institute Data Systems Group's Satellite Data Augmentation Project"
authors = ["Mayank Sharma <imptodefeat@gmail.com>", "Luis Alejandro Bordo García <bgluiszz@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.20"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.12.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.9"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.4.0"
pydantic = "^2.3.0"
pytest-env = "^1.0.1"
faker = "^19.6.2"
pytest-docker = "^2.0.1"
docker = "^6.1.3"
httpx = "^0.25.1"
minio = "^7.2.5"
types-requests = "^2.31.0.20240311"

[tool.pytest.ini_options]
env = [
    "KP_ROOT_DIRECTORY=./tests/mocks",
    "KP_SOURCE_DATA_DIR=source_data",
    "KP_RDBMS_HOST=localhost",
    "KP_RDBMS_PORT=5435",
    "KP_RDBMS_DBNAME=kp-db",
    "KP_RDBMS_USERNAME=postgres",
    "KP_RDBMS_PASSWORD=postgres",
    "KP_FASTAPI_PORT:8005",
    "KP_OBJECT_STORE_HOST=localhost",
    "KP_OBJECT_STORE_PORT=9002",
    "KP_OBJECT_STORE_ACCESS_KEY=minio",
    "KP_OBJECT_STORE_SECRET_KEY=minio123",
    "KP_OBJECT_STORE_BUCKET=default",
    "KP_OBJECT_STORE_SIGNED_URL_EXPIRY=60",
]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
exclude = [
  "tests/types",
]

[[tool.mypy.overrides]]
module = "alembic.env"
ignore_errors = true

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''


[tool.poetry.scripts]
dev = 'lib.infrastructure.rest.main:dev_server'